--- a/style.css
+++ b/style.css
@@ -772,7 +772,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color:#F3976C ;
+    background-color:#000000 ;
     display: flex;
     justify-content: center;
 }
